[gd_scene load_steps=16 format=3 uid="uid://cpqgjup1rm88v"]

[ext_resource type="Script" path="res://scenes/levels/Bounce/bounce.gd" id="1_a6gj7"]
[ext_resource type="PackedScene" uid="uid://bkg7fkcwfs874" path="res://scenes/levels/Bounce/bounce.gltf" id="1_x5hyn"]
[ext_resource type="Texture2D" uid="uid://cw8c88b8srliy" path="res://assets/sprites/hotorget.png" id="2_uasub"]
[ext_resource type="PackedScene" uid="uid://dxlt4a5d2s16m" path="res://scenes/game/diamond.tscn" id="3_cn5ut"]
[ext_resource type="Texture2D" uid="uid://f8jpm36k6bd4" path="res://assets/sprites/Metal7.bmp" id="5_mlnxe"]
[ext_resource type="PackedScene" uid="uid://bqcbx62skxl3r" path="res://scenes/levels/Bounce/bounce_simple.gltf" id="7_r7twn"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_pawxk"]
panorama = ExtResource("2_uasub")

[sub_resource type="Sky" id="Sky_a0ymo"]
sky_material = SubResource("PanoramaSkyMaterial_pawxk")

[sub_resource type="Environment" id="Environment_1lkdw"]
background_mode = 2
sky = SubResource("Sky_a0ymo")
sky_rotation = Vector3(0, 3.14159, 0)
tonemap_mode = 2
ssr_max_steps = 1
ssr_fade_in = 1.883
ssr_fade_out = 0.183011
ssr_depth_tolerance = 49.71
ssao_radius = 3.55
ssao_intensity = 6.03
ssao_power = 0.11949
ssao_horizon = 1.0
glow_enabled = true

[sub_resource type="CylinderMesh" id="CylinderMesh_ah5fp"]
top_radius = 6.0
bottom_radius = 6.0
height = 16.62

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7yyum"]
albedo_color = Color(0.854902, 0.352941, 0.376471, 1)
albedo_texture = ExtResource("5_mlnxe")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cxgjn"]
height = 16.6
radius = 6.0

[sub_resource type="BoxMesh" id="BoxMesh_3ylqq"]
size = Vector3(16.6, 3, 33.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ecwur"]
albedo_texture = ExtResource("5_mlnxe")
uv1_triplanar_sharpness = 1.7411

[sub_resource type="BoxShape3D" id="BoxShape3D_cru8h"]
size = Vector3(16.6, 3, 33.5)

[node name="Bounce" type="Node3D"]
script = ExtResource("1_a6gj7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 8.35189e-23, 4.37114e-08, -4.37114e-08, 1.91069e-15, 1, 0, -1, 1.91069e-15, 0, 1000, 0)
light_color = Color(0.431373, 0.709804, 1, 1)
light_energy = 0.858
shadow_enabled = true
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1lkdw")

[node name="Platform1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.4935, 0, -18.2922)

[node name="bounce" parent="Platform1" instance=ExtResource("1_x5hyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.16821, 2.86102e-06, -3.61701)

[node name="Piston" type="Node3D" parent="Platform1"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -3.22247, -1, -5.90721)

[node name="Base" type="StaticBody3D" parent="Platform1/Piston"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform1/Piston/Base"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ah5fp")
surface_material_override/0 = SubResource("StandardMaterial3D_7yyum")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform1/Piston/Base"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_cxgjn")

[node name="Wing" type="StaticBody3D" parent="Platform1/Piston"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform1/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0.345547, 16.7051)
mesh = SubResource("BoxMesh_3ylqq")
surface_material_override/0 = SubResource("StandardMaterial3D_ecwur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform1/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345547, 16.7051)
shape = SubResource("BoxShape3D_cru8h")

[node name="Diamond3" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 3.88688)

[node name="Diamond4" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -5.38553)

[node name="Diamond5" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -15.831)

[node name="Diamond6" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -25.3127)

[node name="Diamond7" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -35.002)

[node name="Diamond8" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 22.7889)

[node name="Diamond9" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 12.1006)

[node name="Diamond10" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 3.88688)

[node name="Diamond11" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -5.38553)

[node name="Diamond12" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -15.831)

[node name="Diamond13" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -25.3127)

[node name="Diamond14" parent="Platform1" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -35.002)

[node name="Platform2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -27.4935, 21.976, -94.2922)

[node name="bounce" parent="Platform2" instance=ExtResource("1_x5hyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.16821, 2.86102e-06, -3.61701)

[node name="Piston" type="Node3D" parent="Platform2"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -3.22247, -1, -5.90721)

[node name="Base" type="StaticBody3D" parent="Platform2/Piston"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform2/Piston/Base"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ah5fp")
surface_material_override/0 = SubResource("StandardMaterial3D_7yyum")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform2/Piston/Base"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_cxgjn")

[node name="Wing" type="StaticBody3D" parent="Platform2/Piston"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -1.06581e-14, 0, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform2/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0.345547, 16.7051)
mesh = SubResource("BoxMesh_3ylqq")
surface_material_override/0 = SubResource("StandardMaterial3D_ecwur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform2/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0.345547, 16.7051)
shape = SubResource("BoxShape3D_cru8h")

[node name="Diamond1" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 22.7889)

[node name="Diamond2" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 12.1006)

[node name="Diamond3" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 3.88688)

[node name="Diamond4" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -5.38553)

[node name="Diamond5" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -15.831)

[node name="Diamond6" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -25.3127)

[node name="Diamond7" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -35.002)

[node name="Diamond8" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 22.7889)

[node name="Diamond9" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 12.1006)

[node name="Diamond10" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 3.88688)

[node name="Diamond11" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -5.38553)

[node name="Diamond12" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -15.831)

[node name="Diamond13" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -25.3127)

[node name="Diamond14" parent="Platform2" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -35.002)

[node name="Platform3" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 47.6878, 46.7424, -104.805)

[node name="bounce" parent="Platform3" instance=ExtResource("1_x5hyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.16821, 2.86102e-06, -3.61701)

[node name="Piston" type="Node3D" parent="Platform3"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -3.22247, -1, -5.90721)

[node name="Base" type="StaticBody3D" parent="Platform3/Piston"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform3/Piston/Base"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ah5fp")
surface_material_override/0 = SubResource("StandardMaterial3D_7yyum")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform3/Piston/Base"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_cxgjn")

[node name="Wing" type="StaticBody3D" parent="Platform3/Piston"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -1.06581e-14, 0, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform3/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0.345547, 16.7051)
mesh = SubResource("BoxMesh_3ylqq")
surface_material_override/0 = SubResource("StandardMaterial3D_ecwur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform3/Piston/Wing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0.345547, 16.7051)
shape = SubResource("BoxShape3D_cru8h")

[node name="Diamond1" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 22.7889)

[node name="Diamond2" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 12.1006)

[node name="Diamond3" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, 3.88688)

[node name="Diamond4" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -5.38553)

[node name="Diamond5" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -15.831)

[node name="Diamond6" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -25.3127)

[node name="Diamond7" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4994, 0.376566, -35.002)

[node name="Diamond8" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 22.7889)

[node name="Diamond9" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 12.1006)

[node name="Diamond10" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, 3.88688)

[node name="Diamond11" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -5.38553)

[node name="Diamond12" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -15.831)

[node name="Diamond13" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -25.3127)

[node name="Diamond14" parent="Platform3" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.3928, 0.376566, -35.002)

[node name="Platform4" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 43.9627, 72.0206, -31.736)

[node name="bounce_simple" parent="Platform4" instance=ExtResource("7_r7twn")]

[node name="Diamond1" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, 26.9921)

[node name="Diamond2" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, 16.3038)

[node name="Diamond3" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, 8.09014)

[node name="Diamond4" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, -1.18227)

[node name="Diamond5" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, -11.6278)

[node name="Diamond6" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, -21.1094)

[node name="Diamond7" parent="Platform4" instance=ExtResource("3_cn5ut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9866, 0.376564, -30.7987)
